@@ -1,8 +1,9 @@
 // -- This line is 78 characters long ----------------------------------------
 
-inherit "/std/state_monster";
+#include "../../macros.h"
+inherit MONSTER;
 
-#define LOGGER load_object("/players/wilhelm/simple_logger")
+//#define LOGGER load_object("/players/wilhelm/simple_logger")
 
 void reset(int arg)
 {
@@ -24,10 +25,7 @@ void reset(int arg)
   set_gender(1);
   set_level(9);
   set_al(-225);
-  set_state("init");
-  
-  add_hook("die_hook", this_object());
-  add_hook("kill_hook", this_object());   
+  set_state("init"); 
   
   
   
@@ -43,12 +41,4 @@ void reset(int arg)
 
 }
 
-// -- LOGGER ----------------------------------------------------------------
-
-die_hook(data, who) {
-  LOGGER -> log("kills", "killed a assasin vine", data[0]);
-}
-kill_hook(data, who) {
-  LOGGER -> log("deaths", "killed by a assasin vine", data[0]);
-}
 
