@@ -1,8 +1,9 @@
 // -- This line is 78 characters long ----------------------------------------
 
-inherit "/std/state_monster";
+#include "../../macros.h"
+inherit MONSTER;
 
-#define LOGGER load_object("/players/wilhelm/simple_logger")
+//#define LOGGER load_object("/players/wilhelm/simple_logger")
 
 void reset(int arg)
 {
@@ -25,11 +26,7 @@ void reset(int arg)
   set_al(-350);
   set_state("init");
   start_walking(45);
- 
-  add_hook("die_hook", this_object());
-  add_hook("kill_hook", this_object());   
-  
-   
+     
   
 // -- Responses -------------------------------------------------------------
 
@@ -74,12 +71,5 @@ arrive(who) {
   return 1;
 }
 
-// -- LOGGER ----------------------------------------------------------------
 
-die_hook(data, who) {
-  LOGGER -> log("kills", "killed a blood warder", data[0]);
-}
-kill_hook(data, who) {
-  LOGGER -> log("deaths", "killed by a blood warder", data[0]);
-}
 
