@@ -1,9 +1,10 @@
 // -- This line is 78 characters long ----------------------------------------
 
-inherit "/std/state_monster";
+#include "../../macros.h"
+inherit MONSTER;
 
 #define WSAY(X) tell_room(environment(), line_break(X, "Blood warder says: ", 78))
-#define LOGGER load_object("/players/wilhelm/simple_logger")
+//#define LOGGER load_object("/players/wilhelm/simple_logger")
 
 void reset(int arg)
 {
@@ -25,10 +26,7 @@ void reset(int arg)
   set_level(14);
   set_al(-350);
   set_state("init");
-  
-  add_hook("die_hook", this_object());
-  add_hook("kill_hook", this_object());    
-  
+    
 // -- Responses -------------------------------------------------------------
   
   add_response("init","ARRIVE(%1)","$arrive(%1)", "aggressive");
@@ -93,15 +91,4 @@ arrive2(who) {
     attack_object(w);	  
 } 
 
-
-
-
-// -- LOGGER ----------------------------------------------------------------
-
-die_hook(data, who) {
-  LOGGER -> log("kills", "killed a blood warder", data[0]);
-}
-kill_hook(data, who) {
-  LOGGER -> log("deaths", "killed by a blood warder", data[0]);
-}
 
