@@ -1,8 +1,9 @@
 // -- This line is 78 characters long ----------------------------------------
 
-inherit "/std/state_monster";
+#include "../../macros.h"
+inherit MONSTER;
 
-#define LOGGER load_object("/players/wilhelm/simple_logger")
+//#define LOGGER load_object("/players/wilhelm/simple_logger")
 
 void reset(int arg)
 {
@@ -24,9 +25,7 @@ void reset(int arg)
   set_level(16);
   set_al(-400);
   set_state("init");
-  
-  add_hook("die_hook", this_object());
-  add_hook("kill_hook", this_object());   
+   
   
    
   
@@ -77,15 +76,5 @@ arrive(who) {
 	  this_player()->add_property("wilhelm_bloodwood_horn");	
       write ("You feel cursed and the forest seems to shift.\n");
   return 1;
-}
-
-
-// -- LOGGER ----------------------------------------------------------------
-
-die_hook(data, who) {
-  LOGGER -> log("kills", "killed a exolasher", data[0]);
-}
-kill_hook(data, who) {
-  LOGGER -> log("deaths", "killed by a exolasher", data[0]);
 }
 
