@@ -8,3 +8,4 @@
 
 2023-11-22 giku created a new xplogger
 2023-11-23 giku added all monsters in siridfaath into the xplogger
+2023-11-24 giku added all monsters in bloodwood into xplogger
